refact html to pug, add event listners for chat window, refact some elements and css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 
     <div class="js-auth"></div>
-        <div class="js-chat"></div>
-        <div class="js-message"></div>
-    </div>
+    <div class="chat-container js-chat"></div>
+    <div class="js-message"></div>
 
 </body>
 </html>
