Добавил пример реакт компонента

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div class="js-auth"></div>
     <div class="chat-container js-chat"></div>
     <div class="js-message"></div>
-
+    <div class="js-hello"></div>
 </body>
 </html>
