--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <div class="chat-container js-chat"></div>
     <div class="js-message"></div>
 
+    <a href="#login" >Login</a>
+
 </body>
 </html>
